fixning align vertical border of title of module in above content position

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2371,7 +2371,7 @@ a.wylia-readmore{
 				content: '';
 				left: 0;
 				position: absolute;
-				top: 62px;
+				top: 52px;
 				width: 100%;
 			}
 		}
